[HUMAN-88] load @hominem/db into api (#77)
* fix: use Bundler moduleResolution for react-library

* feat: update authentication error alerts

* fix: fix size of map box

* feat: set hominem/db main to source index

* refactor: remove unused type import

* chore: set default formatter to biome

* feat: add shadcn command component

* feat: update turbo to v2

* ci: update github workflows

* fix: add COOKIE_DOMAIN to turbo globalEnv

* fix: switch turbo scope to filter

* ci: remove cypress record

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "quickfix.biome": "explicit",
         "source.organizeImports.biome": "explicit"
     },
+    "editor.defaultFormatter": "biomejs.biome",
     "[typescript]": {
         "editor.defaultFormatter": "biomejs.biome"
     },
@@ -17,10 +18,10 @@
     "[javascript]": {
         "editor.defaultFormatter": "biomejs.biome"
     },
+    "[json]": {
+        "editor.defaultFormatter": "denoland.vscode-deno"
+    },
     "[css]": {
         "editor.defaultFormatter": "biomejs.biome"
     },
-    "[tailwindcss]": {
-        "editor.defaultFormatter": "biomejs.biome"
-    }
 }
