--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "docker:api:run": "docker run -it -p 4444:4444 --name=rocco-api rocco-api",
     "docker:web:build": "docker build -t rocco-web:latest -f Dockerfile.web .",
     "docker:web:run": "docker run -it -p 3000:80 rocco-web",
-    "lint": "turbo run lint && turbo run typecheck",
+    "lint": "npx turbo run lint && npx turbo run typecheck",
     "postinstall": "npm run prisma:generate",
     "precommit": "npm run format && npm run lint",
     "prepare": "husky install",
