--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hominem/db",
   "version": "0.0.0",
-  "main": "index.ts",
+  "main": "build/index.js",
   "license": "MIT",
   "scripts": {
     "build": "tsc",
