--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,7 +10,6 @@
     "lint:fix": "biome format --write ./src",
     "lint:stylelint": "stylelint --config .stylelintrc.json --cache --fix 'src/**/*.{css,scss}'",
     "lint": "biome lint ./src && npm run lint:stylelint",
-    "postinstall": "cypress install",
     "preview:test": "start-server-and-test preview http://localhost:53422",
     "preview": "vite preview",
     "start": "npx http-server build --gzip -a 0.0.0.0 -p $PORT -c 1209600",
@@ -31,6 +30,7 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-slot": "^1.0.2",
     "@reduxjs/toolkit": "^1.7.2",
     "@tanstack/react-query": "^5.35.1",
