--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "docker:web:run": "docker run -it -p 3000:80 rocco-web",
     "lint": "nx affected -t lint && npx nx affected -t typecheck",
     "precommit": "npm run format && npm run lint",
-    "prepare": "husky install",
+    "prepare": "husky",
     "prepush": "npm run test",
     "prerelease": "npm run test",
     "test": "nx affected -t test",
@@ -25,28 +25,28 @@
     "coverage:web": "open apps/web/coverage/lcov-report/index.html"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.7.0",
-    "@commitlint/cli": "^19.2.1",
-    "@commitlint/config-conventional": "^19.1.0",
-    "@nx/playwright": "19.5.4",
-    "@nx/vite": "19.5.4",
-    "@nx/web": "19.5.4",
-    "@playwright/test": "^1.36.0",
-    "@types/node": "^22.0.0",
-    "@vitest/ui": "^1.3.1",
-    "husky": "^8.0.3",
-    "nx": "19.5.4",
-    "turbo": "^2.0.5",
-    "typescript": "^5.5.4",
-    "vite": "^5.0.0",
-    "vitest": "^2.0.4"
+    "@biomejs/biome": "^1.9.3",
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
+    "@nx/playwright": "20.0.0",
+    "@nx/vite": "20.0.0",
+    "@nx/web": "20.0.0",
+    "@playwright/test": "^1.48.0",
+    "@types/node": "^22.7.5",
+    "@vitest/ui": "^2.1.2",
+    "husky": "^9.1.6",
+    "nx": "20.0.0",
+    "turbo": "^2.1.3",
+    "typescript": "^5.6.3",
+    "vite": "^5.4.8",
+    "vitest": "^2.1.2"
   },
   "engines": {
     "node": "20"
   },
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
-    "eslint": "^9.8.0",
+    "eslint": "^9.12.0",
     "workbox-build": "^7.1.1",
     "workbox-window": "^7.1.0"
   }
