--- a/apps/web/.stylelintrc.json
+++ b/apps/web/.stylelintrc.json
@@ -1,3 +1,18 @@
 {
-  "extends": "stylelint-config-prettier"
+  "extends": "stylelint-config-standard",
+  "rules": {
+    "at-rule-no-unknown": [
+      true,
+      {
+        "ignoreAtRules": [
+          "tailwind",
+          "layer",
+          "apply",
+          "variants",
+          "responsive",
+          "screen"
+        ]
+      }
+    ]
+  }
 }
