--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,44 +1,45 @@
 {
-    "[jsonc]": {
-        "editor.defaultFormatter": "biomejs.biome"
-    },
-    "[typescript]": {
-        "editor.defaultFormatter": "biomejs.biome"
-    },
-    "[typescriptreact]": {
-        "editor.defaultFormatter": "biomejs.biome"
-    },
-    "[javascript]": {
-        "editor.defaultFormatter": "biomejs.biome"
-    },
-    "[json]": {
-        "editor.defaultFormatter": "denoland.vscode-deno"
-    },
-    "[css]": {
-        "editor.defaultFormatter": "biomejs.biome"
-    },
-    "biome.searchInPath": true,
-    "biome.lspBin": "node_modules/.bin/biome",
-    "deno.enablePaths": ["supabase/functions"],
-    "deno.lint": true,
-    "editor.defaultFormatter": "biomejs.biome",
-    "editor.tabSize": 2,
-    "editor.formatOnSave": true,
-    "editor.codeActionsOnSave": {
-        "quickfix.biome": "explicit",
-        "source.organizeImports.biome": "explicit",
-        "source.sortImports": "always"
-    },
-    "files.associations": {
-        "*.css": "tailwindcss"
-    },
-    "typescript.enablePromptUseWorkspaceTsdk": true,
-    "typescript.tsdk": "node_modules/typescript/lib",
-    "cSpell.words": [
-        "clsx",
-        "Formik",
-        "lucide",
-        "tanstack",
-        "testid"
-    ],
+	"[jsonc]": {
+		"editor.defaultFormatter": "biomejs.biome"
+	},
+	"[typescript]": {
+		"editor.defaultFormatter": "biomejs.biome"
+	},
+	"[typescriptreact]": {
+		"editor.defaultFormatter": "biomejs.biome"
+	},
+	"[javascript]": {
+		"editor.defaultFormatter": "biomejs.biome"
+	},
+	"[json]": {
+		"editor.defaultFormatter": "denoland.vscode-deno"
+	},
+	"[css]": {
+		"editor.defaultFormatter": "biomejs.biome"
+	},
+	"biome.searchInPath": true,
+	"biome.lspBin": "node_modules/.bin/biome",
+	"deno.enablePaths": ["supabase/functions"],
+	"deno.lint": true,
+	"editor.defaultFormatter": "biomejs.biome",
+	"editor.tabSize": 2,
+	"editor.formatOnSave": true,
+	"editor.codeActionsOnSave": {
+		"quickfix.biome": "explicit",
+		"source.organizeImports.biome": "explicit",
+		"source.sortImports": "always"
+	},
+	"files.associations": {
+		"*.css": "tailwindcss"
+	},
+	"typescript.enablePromptUseWorkspaceTsdk": true,
+	"typescript.tsdk": "node_modules/typescript/lib",
+	"cSpell.words": [
+		"clsx",
+		"Formik",
+		"lucide",
+		"stylelint",
+		"tanstack",
+		"testid"
+	]
 }
