--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,9 +25,9 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@hominem/utils": "*",
     "@headlessui/react": "^2.1.10",
     "@hominem/components": "0.0.0",
+    "@hominem/utils": "*",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
@@ -48,6 +48,7 @@
     "react-dom": "18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
+    "stylelint-config-standard": "^36.0.1",
     "tailwindcss-animate": "^1.0.7",
     "yup": "^1.4.0"
   },
@@ -69,7 +70,6 @@
     "autoprefixer": "^10.4.20",
     "cypress": "^13.15.0",
     "dotenv": "^16.4.5",
-    "husky": "^9.1.6",
     "jsdom": "^25.0.1",
     "msw": "^2.4.9",
     "postcss": "8.4.47",
