--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,8 +1,13 @@
 {
   "name": "@hominem/components",
   "version": "0.0.0",
-  "main": "./index.tsx",
-  "types": "./index.tsx",
+  "types": "./index.ts",
+  "exports": {
+    "./Button": "./components/Button/index.tsx",
+    "./Alert": "./components/Alert/index.tsx",
+    "./Input": "./components/Input/index.tsx",
+    "./Loading": "./components/Loading/index.tsx"
+  },
   "license": "MIT",
   "scripts": {
     "lint": "biome lint ./*.ts*"
@@ -17,7 +22,8 @@
     "prop-types": "^15.8.1",
     "react-stately": "^3.24.0",
     "tailwindcss": "^3.4.3",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.6.3"
   },
   "devDependencies": {
     "@types/prop-types": "^15.7.5",
