--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
+    "framer-motion": "^12.9.4",
     "lefthook": "^1.7.18",
     "workbox-build": "^7.1.1",
     "workbox-window": "^7.1.0"
