chore: clean up repo

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,8 +8,7 @@
 		"build:analyze": "ANALYZE=true react-router build",
 		"dev": "(npx spotlight-sidecar) & react-router dev",
 		"format": "biome format --write ./app",
-		"lint:stylelint": "stylelint --config .stylelintrc.json --cache --fix 'app/**/*.{css,scss}'",
-		"lint": "biome lint ./app && npm run lint:stylelint",
+		"lint": "biome lint ./app",
 		"preview:test": "start-server-and-test preview http://localhost:53422",
 		"preview": "react-router build && react-router-serve ./build/server/index.js",
 		"start": "react-router-serve ./build/server/index.js",
@@ -50,10 +49,6 @@
 		"react-dom": "^19.1.0",
 		"react-redux": "^9.1.2",
 		"react-router": "^7.5.3",
-		"rollup-plugin-visualizer": "^5.14.0",
-		"stylelint-config-standard": "^36.0.1",
-		"tailwind-merge": "3.2.0",
-		"tailwindcss-animate": "^1.0.7",
 		"yup": "^1.4.0"
 	},
 	"devDependencies": {
@@ -84,9 +79,9 @@
 		"rollup-plugin-visualizer": "^5.14.0",
 		"sass": "^1.79.4",
 		"start-server-and-test": "^2.0.8",
-		"stylelint": "^16.9.0",
-		"stylelint-config-prettier": "^9.0.5",
 		"tailwindcss": "^4.1.4",
+		"tailwind-merge": "3.2.0",
+		"tailwindcss-animate": "^1.0.7",
 		"typescript": "5.6.3",
 		"vite": "6.3.3",
 		"vite-plugin-pwa": "^0.20.5",
