refactor: use ~ instead of app

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -42,6 +42,7 @@
 		"clsx": "^2.1.1",
 		"cmdk": "^1.0.0",
 		"formik": "^2.4.6",
+		"framer-motion": "^12.9.4",
 		"isbot": "^5.1.27",
 		"lucide-react": "^0.507.0",
 		"prop-types": "^15.8.1",
