--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "rocco",
+	"name": "@hackefeller/apps",
 	"version": "1.8.0",
 	"private": true,
 	"workspaces": ["apps/*", "packages/*"],
