--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -30,7 +30,7 @@
 		"@radix-ui/react-dropdown-menu": "^2.1.2",
 		"@radix-ui/react-icons": "^1.3.0",
 		"@radix-ui/react-popover": "^1.1.2",
-		"@radix-ui/react-slot": "^1.1.0",
+		"@radix-ui/react-slot": "^1.2.2",
 		"@react-router/node": "^7.5.3",
 		"@react-router/serve": "^7.5.3",
 		"@reduxjs/toolkit": "^2.2.8",
@@ -80,8 +80,8 @@
 		"rollup-plugin-visualizer": "^5.14.0",
 		"sass": "^1.79.4",
 		"start-server-and-test": "^2.0.8",
-		"tailwindcss": "^4.1.4",
 		"tailwind-merge": "3.2.0",
+		"tailwindcss": "^4.1.4",
 		"tailwindcss-animate": "^1.0.7",
 		"typescript": "5.6.3",
 		"vite": "6.3.3",
@@ -90,7 +90,9 @@
 	},
 	"nyc": {
 		"report-dir": "coverage/cypress",
-		"reporter": ["lcov"]
+		"reporter": [
+			"lcov"
+		]
 	},
 	"optionalDependencies": {
 		"@rollup/rollup-linux-x64-gnu": "^4.24.0"
