--- a/.github/workflows/deploy-rocco-prod.yml
+++ b/.github/workflows/deploy-rocco-prod.yml
@@ -18,13 +18,12 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "20"
-          cache: 'yarn'
 
       - name: Install dependencies
-        run: yarn install
+        run: pnpm install
 
       - name: Build web app
-        run: yarn turbo run build --filter=@pontistudios/rocco
+        run: pnpm exec turbo run build --filter=@pontistudios/rocco
         env:
           VITE_API_URL: ${{ secrets.VITE_API_URL }}
           VITE_GOOGLE_API_KEY: ${{ secrets.VITE_GOOGLE_API_KEY }}
