--- a/lefthook.yml
+++ b/lefthook.yml
@@ -16,20 +16,20 @@ commit-msg:
   commands:
     lint:
       glob: "*"
-      run: npx commitlint --config commitlint.config.js --edit $1
+      run: pnpm exec commitlint --config commitlint.config.js --edit $1
 
 pre-commit:
   parallel: true
   commands:
     format:
       tags: format
-      run: yarn format
+      run: pnpm format
     lint:
       tags: lint
-      run: yarn lint
+      run: pnpm lint
 
 pre-push:
   commands:
     test:
       tags: test
-      run: yarn test
+      run: pnpm test
