--- a/.github/workflows/deploy-playground-prod.yml
+++ b/.github/workflows/deploy-playground-prod.yml
@@ -17,7 +17,7 @@ jobs:
       SERVICE_ID: ${{ secrets.RAILWAY_SERVICE_PLAYGROUND }}
     steps:
       - name: Cancel Previous Runs
-        uses: styfle/cancel-workflow-action@0.12.1 # Use a more recent version
+        uses: styfle/cancel-workflow-action@0.12.1
       
       - name: Checkout code
         uses: actions/checkout@v4
