--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,11 +16,9 @@
 	},
 	"editor.defaultFormatter": "biomejs.biome",
 	"editor.tabSize": 2,
-	"editor.formatOnSave": true,
 	"editor.codeActionsOnSave": {
 		"quickfix.biome": "explicit",
-		"source.organizeImports.biome": "explicit",
-		"source.sortImports": "always"
+		"source.organizeImports.biome": "explicit"
 	},
 	"files.associations": {
 		"*.css": "tailwindcss"
