--- a/apps/dumphim/package.json
+++ b/apps/dumphim/package.json
@@ -27,6 +27,7 @@
 		"@react-router/node": "^7.5.3",
 		"@react-router/serve": "^7.5.3",
 		"@supabase/supabase-js": "^2.49.4",
+		"class-variance-authority": "^0.7.1",
 		"cmdk": "^1.1.1",
 		"d3": "^7.9.0",
 		"drizzle-orm": "^0.43.1",
@@ -36,6 +37,7 @@
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
 		"react-router": "^7.5.3",
+		"tailwind-merge": "^3.3.1",
 		"vaul": "^1.1.2"
 	},
 	"devDependencies": {
