--- a/apps/to-do/package.json
+++ b/apps/to-do/package.json
@@ -3,7 +3,7 @@
 	"version": "1.0.0",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
+		"test": "vitest run --passWithNoTests",
 		"dev": "vite",
 		"build": "vite build",
 		"preview": "vite preview"
@@ -13,6 +13,7 @@
 	"license": "ISC",
 	"description": "",
 	"devDependencies": {
-		"vite": "^6.3.5"
+		"vite": "^6.3.5",
+		"vitest": "^3.2.3"
 	}
 }
