feat: implement todo management with CRUD operations and session handling

--- a/apps/scrape/package.json
+++ b/apps/scrape/package.json
@@ -3,7 +3,7 @@
 	"version": "1.0.0",
 	"private": true,
 	"scripts": {
-		"dev": "tsx smart-tax-asset.ts",
+		"start": "tsx smart-tax-asset.ts",
 		"build": "tsc",
 		"type-check": "tsc --noEmit"
 	},
