--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -32,7 +32,7 @@
 		"csv-parse": "^5.6.0",
 		"dotenv": "^16.5.0",
 		"drizzle-kit": "^0.31.1",
-		"drizzle-orm": "^0.44.2",
+		"drizzle-orm": "^0.44.4",
 		"framer-motion": "^12.18.1",
 		"isbot": "^5.1.27",
 		"lucide-react": "^0.539.0",
@@ -58,6 +58,7 @@
 		"@types/react-router-dom": "^5.3.3",
 		"@vitest/coverage-v8": "^3.2.3",
 		"jsdom": "^26.1.0",
+		"lefthook": "^1.7.18",
 		"tailwindcss": "^4.1.10",
 		"tsx": "^4.20.3",
 		"tw-animate-css": "^1.3.4",
