--- a/.github/workflows/deploy-dumphim-prod.yml
+++ b/.github/workflows/deploy-dumphim-prod.yml
@@ -19,8 +19,28 @@ jobs:
         with:
           node-version: "20"
 
-      - name: Install dependencies
-        run: pnpm install
+      - name: 🏗 Set up pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 8
+
+      - name: 📦 Get pnpm store directory
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+
+      - name: 📦 Setup pnpm cache
+        uses: actions/cache@v4
+        with:
+          path: ${{ env.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
+
+      - name: 📦 Install dependencies
+        run: pnpm install --frozen-lockfile
+        env:
+          NODE_ENV: production
 
       - name: Build dumphim app
         run: pnpm exec turbo run build --filter=dumphim
