--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -17,6 +17,7 @@
 	},
 	"dependencies": {
 		"@emotion/styled": "^11.14.1",
+		"@google/genai": "^1.15.0",
 		"@radix-ui/react-accordion": "^1.2.11",
 		"@radix-ui/react-dialog": "^1.1.14",
 		"@radix-ui/react-popover": "^1.1.14",
